prevent line break on summary mode of people-view.

--- a/EnhancedTaskBoard/Content/style.less
+++ b/EnhancedTaskBoard/Content/style.less
@@ -81,7 +81,7 @@
 .taskboard-row-summary .people-view {
     .witRemainingWork {
         margin: 2px 0 0 5px;
-        width: 40px;
+        width: 60px;
         text-align: right;
         margin-right: 4px;
     }
@@ -95,12 +95,13 @@
         .todo, .progress, .done {
             width: 33.33%;
             float: left;
-            padding-left: 8px;
+            padding-left: 12px;
             font-size: larger;
 
             div {
-                width: 60px;
                 float: left;
+                width: 60px;
+                white-space: nowrap;
             }
         }
     }
